react/src/styles/guideline.module.scss
$side-filling: 100px;

$media-landscape: (min-aspect-ratio: 4/3);
$media-portrait: (max-aspect-ratio: 4/3);


header, footer {
    line-height: initial;
    top: 0;
    width: 100%;
    z-index: 50;
    @at-root header {
        position: fixed;
    }

    a,
    a:hover,
    a:link {
        color: inherit;
        text-decoration: none;
    }

    button {
        cursor: pointer;
    }

    a:hover,
    button:hover {
        opacity: 0.8;
    }

    .identity-bar {
        margin-left: -$side-filling;
        margin-right: -$side-filling;
        height: 5px;
        background-color: #E54C65;
    }

    .menu-icon-icon {
        display: none;
        position: absolute;
        cursor: pointer;
        top: (50px - 24px) / 2;
        right: 16px;
        @media #{$media-portrait} {
            display: block;
        }

        i {
            width: 24px;
            height: 24px;
        }
    }

    .content {
        color: #333333;
        position: relative;
        background-color: #F9F0F0;
        &.no-background {
            color:#FFFFFF;
            background-color: transparent;
        }
        transition: background-color 0.1s;

        .content-left,
        .content-right {
            width: 50%;
            height: 50px;
            vertical-align: top;
            display: inline-flex;
            justify-content: space-between;
            align-items: center;
            &.content-right {
                text-align: right;
                @media #{$media-portrait} {
                    text-align: initial;
                    @at-root .menu-closed .content-right {
                        display: none !important;
                    }
                }
            }
            @media #{$media-portrait} {
                width: 100%;
                height: initial;
                flex-direction: column;
                align-items: flex-start;
                &.reverse {
                    flex-direction: column-reverse;
                }
            }

            @mixin side-menus {
                flex: 0 0 auto;
                margin: 0 24px;
                @media #{$media-portrait} {
                    width: calc(100% - 16px * 2);
                    margin: 0 34px;
                    flex-wrap: wrap;

                    & > * {
                        display: block;
                        height: 32px;
                        display: flex;
                        align-items: center;
                    }
                }
            }
            .logo {
                @include side-menus;

                @media #{$media-portrait} {
                    margin: 0 16px;
                    & > * {
                        height: 50px;
                    }
                }
                img {
                    height: 27px;
                }
            }
            .common-menus {
                @include side-menus;
                font-size: 14px;

                @media #{$media-portrait} {
                    font-size: 15px;
                    padding-bottom: 16px;

                    & > * span {
                        display: initial !important;
                    }

                    @at-root .menu-closed .common-menus {
                        display: none;
                    }
                }

                & > * {
                    &:not(:last-child) {
                        margin-right: 16px;

                        span {
                            display: none;
                        }
                    }

                    i {
                        width: 16px;
                        height: 16px;
                    }

                    span {
                        margin-left: 6px;
                    }
                }
            }
    
            @mixin center-menus {
                flex: 0 1 auto;
                width: calc((80vh + 382px) / 2);
                font-size: 15px;
                white-space: nowrap;
                @media #{$media-portrait} {
                    width: calc(100% - 34px);
                    margin-left: 34px;

                    & > * {
                        display: block;
                        width: 100%;
                        height: 32px;
                        display: flex;
                        align-items: center;
                    }
                }
            }
            .menus {
                @include center-menus;

                @media #{$media-portrait} {
                    padding-bottom: 8px;

                    @at-root .menu-closed .menus {
                        display: none;
                    }

                    @at-root .reverse .menus {
                        padding-bottom: 0 !important;
                        padding-top: 16px;
                    }
                }

                & > * {
                    margin-right: 24px;
                }
            }
            .special-menus {
                @include center-menus;

                @media #{$media-portrait} {
                    @at-root .menu-closed .special-menus {
                        display: none;
                    }
                }

                & > * {
                    margin-left: 24px;
                }
            }
        }
    }

    .contact {
        position: absolute;
        bottom: 0px;
        right: 0px;
        height: 50px;
        font-size: 13px;
        display: flex;
        align-items: center;

        & > * {
            margin: 0 24px;
            @media #{$media-portrait} {
                margin: 0 16px;
            }
        }
    }

    $names: language, notification, user, menu_list, menu_close;
    @each $name in $names {
        i.icon--header_#{$name} {
            display: inline-block;
            background: none no-repeat center center;
            background-image: url('../static/icons/guideline/header_#{$name}.svg');
            @at-root .no-background i.icon--header_#{$name} {
                background-image: url('../static/icons/guideline/header_#{$name}_light.svg');
            }
        }
    }
}

